--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -11,10 +11,10 @@
 
   --border-radius-pattern: 10px;
 
-  --h1-size: 4rem;
+  --h1-size: 3.5rem;
   --h1-font-family: 'Righteous', cursive;
 
-  --p-size: 2rem;
+  --p-size: 1.5rem;
   --p-font-family: 'Roboto', sans-serif;
 
 }
@@ -33,6 +33,6 @@ h1 {
   font-size: var(--h1-size);
 }
 
-p {
+h3 {
   font-size: var(--p-size);
 }
